<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/MenuTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MenuTitleText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationY="50dp" />

        <Button
            android:id="@+id/MenuWorkoutButton"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:text="@string/MenuWorkoutButtonText"
            android:textSize="20sp"
            android:translationX="40dp"
            android:textStyle="bold"
            android:translationY="125dp" />

        <Button
            android:id="@+id/MenuWaterCalButton"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:text="@string/MenuWaterCalButtonText"
            android:textSize="20sp"
            android:translationX="40dp"
            android:textStyle="bold"
            android:translationY="200dp" />

        <Button
            android:id="@+id/MenuProgressButton"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:text="@string/MenuProgressButtonText"
            android:textSize="20sp"
            android:translationX="40dp"
            android:textStyle="bold"
            android:translationY="275dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>