<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/WaterCalTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/WaterCalTitleText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EnterCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/EnterCaloriesText"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationX="25dp"
        android:translationY="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WaterCalTitleText" />

    <EditText
        android:id="@+id/CaloriesEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/CaloriesEditText"
        android:text="@string/EditCaloriesText"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationX="25dp"
        android:translationY="75dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EnterCaloriesText"
        app:layout_constraintStart_toEndOf="@+id/EnterCaloriesText" />

    <TextView
        android:id="@+id/EnterWaterOzText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/EnterWaterText"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationX="25dp"
        android:translationY="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EnterCaloriesText" />

    <EditText
        android:id="@+id/WaterOzEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/EditWaterText"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationX="25dp"
        android:translationY="160dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EnterWaterOzText"
        app:layout_constraintStart_toEndOf="@+id/EnterWaterOzText" />

    <Button
        android:id="@+id/WaterCalSubmitButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/SubmitButtonText"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:translationY="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WaterOzEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>